2008-07-30  Mark Ellis <mark@mpellis.org.uk>

	* configure.ac.in: default hal addon dir to hal's $libdir/hal
	  and add option to override
	* hal/Makefile.am: install addon scripts to determined dir

2008-07-19  Mark Ellis <mark@mpellis.org.uk>

	* hal-synce-rndis.in: fix for dhclient output format change
	* remove patches dir, no longer required

2008-07-07  Mark Ellis <mark@mpellis.org.uk>

	* hal-synce-serial.in: always add updetach to pppd options

2008-05-07  Mark Ellis <mark@mpellis.org.uk>

	* 10-synce.fdi: fix to freebsd ucom match
	* hal-synce-serial.in: use ':' instead of /bin/true as no-op,
	  don't call synce-serial-abort-device on connection

2008-05-02  Mark Ellis <mark@mpellis.org.uk>

	* instructions for changing log level, set default to
	  warning
	* changed log facility to daemon
	* fix make dist
	* improve README
	* change hal-synce-legacy to hal-synce-serial

2008-04-30  Mark Ellis <mark@mpellis.org.uk>

	* exit gracefully after receiving SIGTERM, which hal sends
	  when device disconnects
	* make log level configurable in scripts, tidy logging

2008-04-25  Mark Ellis <mark@mpellis.org.uk>

	* added some bluetooth scripts, updated README

2008-04-14  Mark Ellis <mark@mpellis.org.uk>

	* fixed rndis dhcp connection
	* make sure dccm logs everything to syslog
	* become an addon when device is added instead of a callout,
	  prevents the device being advertised until properly set up

2008-04-10  Mark Ellis <mark@mpellis.org.uk>

	* more FreeBSD fixes, thanks to Ilya Bakulin

2008-04-01  Mark Ellis <mark@mpellis.org.uk>

	* cleaned up build system, should help *bsd'ers
	* removed libsynce and librapi2 patches, these have been committed
	* added patch for sync-engine

2008-03-28  Mark Ellis <mark@mpellis.org.uk>

	* replaced rndis callout script with python script to
	  first attempt dhcp configuration, then fall back to
	  static config

2008-03-25  Mark Ellis <mark@mpellis.org.uk>

	* removed unneeded linux/if.h include from utils.c for